added details to home page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="copyright" content="Nick Dolf">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>welcome to nickdolf com. you can do anything at nickdolf com. this is nickdolf com. the unattainable is unknown at nickdolf com</title>
+	<title>welcome to nickdolfcom you can do anything at nickdolfcom this is nickdolfcom the unattainable is unknown at nickdolfcom</title>
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -15,6 +15,7 @@
 				<a href="../art-attack/">art attack</a> [In progress]
 				<ul>
 					<li>A prototype for a digital art experience</li>
+					<li>Developer</li>
 				</ul>
 			</li>
 			<br>
