--- a/index.html
+++ b/index.html
@@ -8,32 +8,58 @@
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-	<div>
+	<main>
+		
 		<h1>nickdolf.com</h1>
-		<ul>
-			<li>
-				<a href="../art-attack/">art attack</a> [In progress]
-				<ul>
-					<li>A prototype for a digital art experience</li>
-					<li>Developer</li>
-				</ul>
-			</li>
-			<br>
-			<li>
-				<a href="../ceic/">ceic</a> [In progress]
-				<ul>
-					<li><a href="https://github.com/Code-For-Chicago/ceic_wordpress">github repo</a></li>
-					<li>A volunteer project with <a href="https://codeforchicago.org/">Code for Chicago</a></li>
-				</ul>
-			</li>
-			<br>
-			<li>
-				<a href="http://www.jadeyumang.com">jadeyumang.com</a> [In progress]
-				<ul>
-					<li>Developer</li>
-				</ul>
-			</li>
+		<div class="spacer">
+			<ul class="list-expandable list-centered">
+				<li><div class="icon icon-plus"></div><span>My portfolio site</span></li>
+				<li><div class="icon icon-square"></div><a href="https://github.com/nick-dolf/">github</a></li>
+			</ul>
+		</div>
+		
+		<h2><a href="../ceic/">ceic</a><small> [in progress]</small></h2>
+		<ul class="list-expandable">
+			<li><div class="icon icon-plus"></div>A volunteer project with <a href="https://codeforchicago.org/">Code for Chicago</a></li>
+			<li><div class="icon icon-square"></div>Role: Developer</li>
+			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL</li>
+			<li><div class="icon icon-square"></div><a href="https://github.com/Code-For-Chicago/ceic-jekyll">github repo</a></li>
 		</ul>
-	</div>
+
+		<h2><a href="../art-attack/">art attack</a> <small>[in progress]</small></h2>
+		<ul class="list-expandable">
+			<li><div class="icon icon-plus"></div>A prototype for a digital art experience</li>
+			<li><div class="icon icon-square"></div>Role: Developer</li>
+			<li><div class="icon icon-square"></div>Tech: Webgl</li>
+			
+			<li><div class="icon icon-square"></div><a href="https://github.com/nick-dolf/art-attack">github repo</a></li>
+		</ul>
+
+		<h2><a href="http://www.jadeyumang.com">jadeyumang.com</a><small> [in progress]</small></h2>
+		<ul class="list-expandable">
+			<li><div class="icon icon-plus"></div>An artist portfolio site</li>
+			<li><div class="icon icon-square"></div>Role: Developer</li>
+			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT</li>
+			<li><div class="icon icon-square"></div><a href="https://github.com/nick-dolf/art-attack">github repo</a></li>
+		</ul>
+
+		<h2><a href="../tatlo">tatlo.com</a><small> [in progress]</small></h2>
+		<ul class="list-expandable">
+			<li><div class="icon icon-plus"></div>An artist portfolio site</li>
+			<li><div class="icon icon-square"></div>Role: Developer and Designer</li>
+			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL</li>
+			<li><div class="icon icon-square"></div><a href="https://github.com/nick-dolf/art-attack">github repo</a></li>
+		</ul>
+
+		<h2>this site</h2>
+		<ul class="list-expandable">
+			<li><div class="icon icon-plus"></div>you can do anything at nickdolfcom</li>
+			<li><div class="icon icon-square"></div>Role: Developer and Designer</li>
+			<li><div class="icon icon-square"></div>Tech: HTML/SASS/JAVASCRIPT</li>
+			<li><div class="icon icon-square"></div><a href="https://github.com/nick-dolf/art-attack">github repo</a></li>
+		</ul>
+
+
+	</main>
 </body>
 </html>
