fixed some links

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 			<li><div class="icon icon-plus"></div>An artist portfolio site</li>
 			<li><div class="icon icon-square"></div>Role: Developer</li>
 			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT</li>
-			<li><div class="icon icon-square"></div><a href="https://github.com/nick-dolf/art-attack">github repo</a></li>
 		</ul>
 
 		<h2><a href="../tatlo">tatlo.com</a><small> [in progress]</small></h2>
@@ -48,7 +47,7 @@
 			<li><div class="icon icon-plus"></div>An artist portfolio site</li>
 			<li><div class="icon icon-square"></div>Role: Developer and Designer</li>
 			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL</li>
-			<li><div class="icon icon-square"></div><a href="https://github.com/nick-dolf/art-attack">github repo</a></li>
+			<li><div class="icon icon-square"></div><a href="https://github.com/nick-dolf/tatlo">github repo</a></li>
 		</ul>
 
 		<h2>this site</h2>
@@ -56,7 +55,7 @@
 			<li><div class="icon icon-plus"></div>you can do anything at nickdolfcom</li>
 			<li><div class="icon icon-square"></div>Role: Developer and Designer</li>
 			<li><div class="icon icon-square"></div>Tech: HTML/SASS/JAVASCRIPT</li>
-			<li><div class="icon icon-square"></div><a href="https://github.com/nick-dolf/art-attack">github repo</a></li>
+			<li><div class="icon icon-square"></div><a href="https://github.com/nick-dolf/home">github repo</a></li>
 		</ul>
 
 
