--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 		<div class="spacer">
 			<ul class="list-expandable list-centered">
 				<li><div class="icon icon-plus"></div><span>My portfolio site</span></li>
-				<li><div class="icon icon-square"></div><a href="https://github.com/nick-dolf/">github</a></li>
+				<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/">github</a></li>
 			</ul>
 		</div>
 		
 		<h2><a href="../ceic/">ceic</a><small> [in progress]</small></h2>
 		<ul class="list-expandable">
-			<li><div class="icon icon-plus"></div>A volunteer project with <a href="https://codeforchicago.org/">Code for Chicago</a></li>
+			<li><div class="icon icon-plus"></div>A volunteer project with&nbsp<a href="https://codeforchicago.org/">Code for Chicago</a></li>
 			<li><div class="icon icon-square"></div>Role: Developer</li>
 			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL</li>
-			<li><div class="icon icon-square"></div><a href="https://github.com/Code-For-Chicago/ceic-jekyll">github repo</a></li>
+			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/Code-For-Chicago/ceic-jekyll">github repo</a></li>
 		</ul>
 
 		<h2><a href="../art-attack/">art attack</a> <small>[in progress]</small></h2>
@@ -32,7 +32,7 @@
 			<li><div class="icon icon-square"></div>Role: Developer</li>
 			<li><div class="icon icon-square"></div>Tech: Webgl</li>
 			
-			<li><div class="icon icon-square"></div><a href="https://github.com/nick-dolf/art-attack">github repo</a></li>
+			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/art-attack">github repo</a></li>
 		</ul>
 
 		<h2><a href="http://www.jadeyumang.com">jadeyumang.com</a><small> [in progress]</small></h2>
@@ -47,7 +47,7 @@
 			<li><div class="icon icon-plus"></div>An artist portfolio site</li>
 			<li><div class="icon icon-square"></div>Role: Developer and Designer</li>
 			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL</li>
-			<li><div class="icon icon-square"></div><a href="https://github.com/nick-dolf/tatlo">github repo</a></li>
+			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/tatlo">github repo</a></li>
 		</ul>
 
 		<h2>this site</h2>
@@ -55,9 +55,10 @@
 			<li><div class="icon icon-plus"></div>you can do anything at nickdolfcom</li>
 			<li><div class="icon icon-square"></div>Role: Developer and Designer</li>
 			<li><div class="icon icon-square"></div>Tech: HTML/SASS/JAVASCRIPT</li>
-			<li><div class="icon icon-square"></div><a href="https://github.com/nick-dolf/home">github repo</a></li>
+			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/home">github repo</a></li>
 		</ul>
 
+		
 
 	</main>
 </body>
