adjusted spacings and paddings to fix mobile size issues

--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-	<main>
-		
+	<header>
 		<h1>nickdolf.com</h1>
-		<div class="spacer">
-			<ul class="list-expandable list-centered">
-				<li><div class="icon icon-plus"></div><span>My portfolio site</span></li>
-				<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/">github</a></li>
-			</ul>
-		</div>
-		
+		<ul class="list-expandable list-centered">
+			<li><div class="icon icon-plus"></div><span>My portfolio site</span></li>
+			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/">github</a></li>
+		</ul>
+	</header>
+	<main>
 		<h2><a href="../ceic/">ceic</a><small> [in progress]</small></h2>
 		<ul class="list-expandable">
 			<li><div class="icon icon-plus"></div>A volunteer project with&nbsp<a href="https://codeforchicago.org/">Code for Chicago</a></li>
@@ -31,7 +29,7 @@
 			<li><div class="icon icon-plus"></div>A prototype for a digital art experience</li>
 			<li><div class="icon icon-square"></div>Role: Developer</li>
 			<li><div class="icon icon-square"></div>Tech: Webgl</li>
-			
+
 			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/art-attack">github repo</a></li>
 		</ul>
 
@@ -58,7 +56,7 @@
 			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/home">github repo</a></li>
 		</ul>
 
-		
+
 
 	</main>
 </body>
