changed content on index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="copyright" content="Nick Dolf">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="wid
+	th=device-width, initial-scale=1.0">
 	<title>welcome to nickdolfcom you can do anything at nickdolfcom this is nickdolfcom the unattainable is unknown at nickdolfcom</title>
 	<link rel="stylesheet" href="./css/style.css">
 </head>
@@ -19,7 +20,7 @@
 		<h2><a href="../ceic/">ceic</a><small> [in progress]</small></h2>
 		<ul class="list-expandable">
 			<li><div class="icon icon-plus"></div>A volunteer project with&nbsp<a href="https://codeforchicago.org/">Code for Chicago</a></li>
-			<li><div class="icon icon-square"></div>Role: Developer</li>
+			<li><div class="icon icon-square"></div>Role: Lead Developer</li>
 			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL</li>
 			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/Code-For-Chicago/ceic-jekyll">github repo</a></li>
 		</ul>
