adjusted repsonive menu to look better on mobile

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<main>
 		<h2><a href="../ceic/">ceic</a><small> [in progress]</small></h2>
 		<ul class="list-expandable">
-			<li><div class="icon icon-plus"></div>A volunteer project with&nbsp<a href="https://codeforchicago.org/">Code for Chicago</a></li>
+			<li><div class="icon icon-plus"></div><span>A volunteer project with&nbsp<a href="https://codeforchicago.org/">Code for Chicago</a></span></li>
 			<li><div class="icon icon-square"></div>Role: Lead Developer</li>
 			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL</li>
 			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/Code-For-Chicago/ceic-jekyll">github repo</a></li>
