fixed accidental line break

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="copyright" content="Nick Dolf">
-	<meta name="viewport" content="wid
-	th=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>welcome to nickdolfcom you can do anything at nickdolfcom this is nickdolfcom the unattainable is unknown at nickdolfcom</title>
 	<link rel="stylesheet" href="./css/style.css">
 </head>
