--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 	<header>
 		<h1>nickdolf.com</h1>
-		<ul class="list-expandable list-centered">
+		<ul tabindex="0" class="list-expandable list-centered">
 			<li><div class="icon icon-plus"></div><span>My portfolio site</span></li>
 			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/">github</a></li>
 		</ul>
 	</header>
 	<main>
 		<h2><a href="../ceic/">ceic</a><small> [in progress]</small></h2>
-		<ul class="list-expandable">
+		<ul tabindex="0" class="list-expandable">
 			<li><div class="icon icon-plus"></div><span>A volunteer project with&nbsp<a href="https://codeforchicago.org/">Code for Chicago</a></span></li>
 			<li><div class="icon icon-square"></div>Role: Lead Developer</li>
 			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL</li>
@@ -25,7 +25,7 @@
 		</ul>
 
 		<h2><a href="../art-attack/">art attack</a> <small>[in progress]</small></h2>
-		<ul class="list-expandable">
+		<ul tabindex="0" class="list-expandable">
 			<li><div class="icon icon-plus"></div>A prototype for a digital art experience</li>
 			<li><div class="icon icon-square"></div>Role: Developer</li>
 			<li><div class="icon icon-square"></div>Tech: Webgl</li>
@@ -34,14 +34,14 @@
 		</ul>
 
 		<h2><a href="http://www.jadeyumang.com">jadeyumang.com</a><small> [in progress]</small></h2>
-		<ul class="list-expandable">
+		<ul tabindex="0" class="list-expandable">
 			<li><div class="icon icon-plus"></div>An artist portfolio site</li>
 			<li><div class="icon icon-square"></div>Role: Developer</li>
 			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT</li>
 		</ul>
 
 		<h2><a href="../tatlo">tatlo.com</a><small> [in progress]</small></h2>
-		<ul class="list-expandable">
+		<ul tabindex="0" class="list-expandable">
 			<li><div class="icon icon-plus"></div>An artist portfolio site</li>
 			<li><div class="icon icon-square"></div>Role: Developer and Designer</li>
 			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL</li>
@@ -49,10 +49,10 @@
 		</ul>
 
 		<h2>this site</h2>
-		<ul class="list-expandable">
+		<ul tabindex="0" class="list-expandable">
 			<li><div class="icon icon-plus"></div>you can do anything at nickdolfcom</li>
 			<li><div class="icon icon-square"></div>Role: Developer and Designer</li>
-			<li><div class="icon icon-square"></div>Tech: HTML/SASS/JAVASCRIPT</li>
+			<li><div class="icon icon-square"></div>Tech: HTML/SASS</li>
 			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/home">github repo</a></li>
 		</ul>
 
