changed tatlo link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>welcome to nickdolfcom you can do anything at nickdolfcom this is nickdolfcom the unattainable is unknown at nickdolfcom</title>
 	<link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
 	<header>
 		<h1>nickdolf.com</h1>
@@ -40,7 +41,7 @@
 			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT</li>
 		</ul>
 
-		<h2><a href="../tatlo">tatlo.com</a><small> [in progress]</small></h2>
+		<h2><a href="../staging/tatlo">tatlo.com</a><small> [in progress]</small></h2>
 		<ul tabindex="0" class="list-expandable">
 			<li><div class="icon icon-plus"></div>An artist portfolio site</li>
 			<li><div class="icon icon-square"></div>Role: Developer and Designer</li>
