--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="copyright" content="Nick Dolf">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A reliable and fun web developer">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 	<title>welcome to nickdolfcom you can do anything at nickdolfcom this is nickdolfcom the unattainable is unknown at nickdolfcom</title>
 	<link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
 	<header>
 		<h1>nickdolf.com</h1>
@@ -19,9 +20,9 @@
 	<main>
 		<h2><a href="../ceic/">ceic</a><small> [in progress]</small></h2>
 		<ul tabindex="0" class="list-expandable">
-			<li><div class="icon icon-plus"></div><span>A volunteer project with&nbsp<a href="https://codeforchicago.org/">Code for Chicago</a></span></li>
+			<li><div class="icon icon-plus"></div><span>A volunteer project with&nbsp;<a href="https://codeforchicago.org/">Code for Chicago</a></span></li>
 			<li><div class="icon icon-square"></div>Role: Lead Developer</li>
-			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL</li>
+			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL/FORESTRY</li>
 			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/Code-For-Chicago/ceic-jekyll">github repo</a></li>
 		</ul>
 
@@ -30,7 +31,6 @@
 			<li><div class="icon icon-plus"></div>A prototype for a digital art experience</li>
 			<li><div class="icon icon-square"></div>Role: Developer</li>
 			<li><div class="icon icon-square"></div>Tech: Webgl</li>
-
 			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/art-attack">github repo</a></li>
 		</ul>
 
@@ -56,9 +56,6 @@
 			<li><div class="icon icon-square"></div>Tech: HTML/SASS</li>
 			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/home">github repo</a></li>
 		</ul>
-
-
-
 	</main>
 </body>
 </html>
