--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</ul>
 	</header>
 	<main>
-		<h2><a href="../ceic/">ceic</a><small> [in progress]</small></h2>
+		<h2><a href="../staging/ceic/">ceic</a><small> [in progress]</small></h2>
 		<ul tabindex="0" class="list-expandable">
 			<li><div class="icon icon-plus"></div><span>A volunteer project with&nbsp;<a href="https://codeforchicago.org/">Code for Chicago</a></span></li>
 			<li><div class="icon icon-square"></div>Role: Lead Developer</li>
