--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
 		</ul>
 	</header>
 	<main>
+
+    <h2><a href="http://tatlo.info">tatlo</a></h2>
+    <ul tabindex="0" class="list-expandable">
+			<li><div class="icon icon-plus"></div>An artist portfolio site</li>
+			<li><div class="icon icon-square"></div>Role: Developer and Designer</li>
+			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL</li>
+			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/tatlo">github repo</a></li>
+		</ul>
+
 		<h2><a href="../staging/ceic/">ceic</a><small> [in progress]</small></h2>
 		<ul tabindex="0" class="list-expandable">
 			<li><div class="icon icon-plus"></div><span>A volunteer project with&nbsp;<a href="https://codeforchicago.org/">Code for Chicago</a></span></li>
@@ -39,14 +48,6 @@
 			<li><div class="icon icon-plus"></div>An artist portfolio site</li>
 			<li><div class="icon icon-square"></div>Role: Developer</li>
 			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT</li>
-		</ul>
-
-		<h2><a href="../staging/tatlo">tatlo.com</a><small> [in progress]</small></h2>
-		<ul tabindex="0" class="list-expandable">
-			<li><div class="icon icon-plus"></div>An artist portfolio site</li>
-			<li><div class="icon icon-square"></div>Role: Developer and Designer</li>
-			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL</li>
-			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/tatlo">github repo</a></li>
 		</ul>
 
 		<h2>this site</h2>
