--- a/index.html
+++ b/index.html
@@ -19,11 +19,19 @@
 	</header>
 	<main>
 
+		<h2><a href="http://www.jadeyumang.com">jadeyumang.com</a><small></small></h2>
+		<ul tabindex="0" class="list-expandable">
+			<li><div class="icon icon-plus"></div>An artist portfolio site with custom CMS</li>
+			<li><div class="icon icon-square"></div>Role: Developer</li>
+			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/NODE/EXPRESS/PUG</li>
+			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/jade">github repo</a></li>
+		</ul>
+
     <h2><a href="http://tatlo.info">tatlo</a></h2>
     <ul tabindex="0" class="list-expandable">
 			<li><div class="icon icon-plus"></div>An artist portfolio site</li>
 			<li><div class="icon icon-square"></div>Role: Developer and Designer</li>
-			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL</li>
+			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL/FORESTRY</li>
 			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/tatlo">github repo</a></li>
 		</ul>
 
@@ -43,12 +51,7 @@
 			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/art-attack">github repo</a></li>
 		</ul>
 
-		<h2><a href="http://www.jadeyumang.com">jadeyumang.com</a><small> [in progress]</small></h2>
-		<ul tabindex="0" class="list-expandable">
-			<li><div class="icon icon-plus"></div>An artist portfolio site</li>
-			<li><div class="icon icon-square"></div>Role: Developer</li>
-			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT</li>
-		</ul>
+
 
 		<h2>this site</h2>
 		<ul tabindex="0" class="list-expandable">
