--- a/index.html
+++ b/index.html
@@ -1,65 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="copyright" content="Nick Dolf">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="A reliable and fun web developer">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-	<title>welcome to nickdolfcom you can do anything at nickdolfcom this is nickdolfcom the unattainable is unknown at nickdolfcom</title>
-	<link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-	<header>
-		<h1>nickdolf.com</h1>
-		<ul tabindex="0" class="list-expandable list-centered">
-			<li><div class="icon icon-plus"></div><span>My portfolio site</span></li>
-			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/">github</a></li>
-		</ul>
-	</header>
-	<main>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="I'm a reliable and fun developer.">
+    <title>Nick Dolf - Full Stack Developer</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  </head>
+  <body>
+    <main>
+      <section class="intro">
+        <div class="columns">
+          <div class="column-one">
+            <h1>Hi ! I'm Nick Dolf - Full Stack Developer<br> Based in Chicago, IL
+            </h1><p>After being in the coffee world for over 16 years as an operations manager and technician I later discovered my desire for coding and decided to go back to school to fully immerse myself in the field. After earning my Bachelor of Science in Computer Science from Simon Fraser University in 2020 I also mover to Chicago, Illinois to be with my partner and our talkative cuddly cat.</p>
+<p>Since then I have been a developer in different capacities. I designed and developed two artist websites. I am also a volunteer lead developer for Code for Chicago, specifically building a new website for Cannabis Equity Illinois Coalition, which is a local non-profit that help with expungements for cannabis convictions and advocates for reform. I am also a freelance email developer for Mission Wired, and I do freelance Autocad drafting for Measure Masters.</p>
+<p>I am always excited to learn new languages while constantly sharpening the ones I know. Currently I am working on a open source CMS and a fitness app, among others to expand my scope and apply my knowledge and experience to professional opportunities.</p>
+<p>In my spare time, I am learning how to play the guitar, work out, learn Spanish, cook and bake, and soak as much sun as I can.</p>
 
-		<h2><a href="http://www.jadeyumang.com">jadeyumang.com</a><small></small></h2>
-		<ul tabindex="0" class="list-expandable">
-			<li><div class="icon icon-plus"></div>An artist portfolio site with custom CMS</li>
-			<li><div class="icon icon-square"></div>Role: Developer</li>
-			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/NODE/EXPRESS/PUG</li>
-			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/jade">github repo</a></li>
-		</ul>
+          </div>
+          <div class="column-two">
+            <picture>
+              <source type="image/webp" srcset="/assets/images/nick_pic_square-1681073301461-300.webp"/><img src="/assets/images/nick_pic_square-1681073301461-300.jpg" width="300" height="300" alt="Nick Dolf"/>
+            </picture>
+            <div class="skills">
+              <p>HTML</p>
+              <p>CSS/SCSS</p>
+              <p>Javascript</p>
+              <p>JQuery</p>
+              <p>Git</p>
+              <p>Linux</p>
+              <p>MongoDb</p>
+              <p>Express</p>
+              <p>React</p>
+              <p>Node</p>
+              <p>Python</p>
+              <p>C/C++</p>
+              <p>PUG</p>
+              <p>Liquid</p>
+              <p>Autocad</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="grid">
+        <h1>Latest Projects</h1>
+        <div class="grid-container">
+          <div class="card"><a href="https://jadeyumang.com/">
+              <div class="image-container">
+                <picture>
+                  <source type="image/webp" srcset="/assets/images/jadeyumang-1681073281746-600.webp"/><img src="/assets/images/jadeyumang-1681073281746-600.jpg" width="600" height="1289" alt="jadeyumang.com"/>
+                </picture>
+              </div></a>
+            <div class="text-container"><p><em>Developer</em><br />Artist portfolio site with a custom CMS generating a static site.</p>
 
-    <h2><a href="http://tatlo.info">tatlo</a></h2>
-    <ul tabindex="0" class="list-expandable">
-			<li><div class="icon icon-plus"></div>An artist portfolio site</li>
-			<li><div class="icon icon-square"></div>Role: Developer and Designer</li>
-			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL/FORESTRY</li>
-			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/tatlo">github repo</a></li>
-		</ul>
+            </div>
+            <div class="skill-container"><span class="pill">HTML</span><span class="pill">SCSS</span><span class="pill">NODE</span><span class="pill">EXPRESS</span><span class="pill">PUG</span><span class="pill">BOOTSTRAP</span><span class="pill">JS</span><a href="https://github.com/nick-dolf/jade"><span>github repo</span>
+                <svg viewbox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                  <use xlink:href="/assets/svg/sprites.svg#github"></use>
+                </svg></a>
+            </div>
+          </div>
+          <div class="card"><a href="https://nickdolf.com/staging/ceic/">
+              <div class="image-container">
+                <picture>
+                  <source type="image/webp" srcset="/assets/images/ceic-1681073281746-600.webp"/><img src="/assets/images/ceic-1681073281746-600.jpg" width="600" height="1724" alt="ceic"/>
+                </picture>
+              </div></a>
+            <div class="text-container"><p><em>Lead Developer</em><br />Local non-profit website with static site generator and headless CMS.</p>
 
-		<h2><a href="../staging/ceic/">ceic</a><small> [in progress]</small></h2>
-		<ul tabindex="0" class="list-expandable">
-			<li><div class="icon icon-plus"></div><span>A volunteer project with&nbsp;<a href="https://codeforchicago.org/">Code for Chicago</a></span></li>
-			<li><div class="icon icon-square"></div>Role: Lead Developer</li>
-			<li><div class="icon icon-square"></div>Tech: HTML/SCSS/JAVASCRIPT/JEKYLL/FORESTRY</li>
-			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/Code-For-Chicago/ceic-jekyll">github repo</a></li>
-		</ul>
+            </div>
+            <div class="skill-container"><span class="pill">HTML</span><span class="pill">SCSS</span><span class="pill">JS</span><span class="pill">JEKYLL</span><span class="pill">LIQUID</span><span class="pill">FORESTRY</span><a href="https://github.com/Code-For-Chicago/ceic-jekyll"><span>github repo</span>
+                <svg viewbox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                  <use xlink:href="/assets/svg/sprites.svg#github"></use>
+                </svg></a>
+            </div>
+          </div>
+          <div class="card"><a href="https://www.tatlo.info/">
+              <div class="image-container">
+                <picture>
+                  <source type="image/webp" srcset="/assets/images/tatlo-1681073376089-600.webp"/><img src="/assets/images/tatlo-1681073376089-600.jpg" width="600" height="407" alt="tatlo.info"/>
+                </picture>
+              </div></a>
+            <div class="text-container"><p><em>Developer</em><br />Artist portfolio site with a custom CMS generating a static site.</p>
 
-		<h2><a href="../art-attack/">art attack</a> <small>[in progress]</small></h2>
-		<ul tabindex="0" class="list-expandable">
-			<li><div class="icon icon-plus"></div>A prototype for a digital art experience</li>
-			<li><div class="icon icon-square"></div>Role: Developer</li>
-			<li><div class="icon icon-square"></div>Tech: Webgl</li>
-			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/art-attack">github repo</a></li>
-		</ul>
-
-
-
-		<h2>this site</h2>
-		<ul tabindex="0" class="list-expandable">
-			<li><div class="icon icon-plus"></div>you can do anything at nickdolfcom</li>
-			<li><div class="icon icon-square"></div>Role: Developer and Designer</li>
-			<li><div class="icon icon-square"></div>Tech: HTML/SASS</li>
-			<li><img src="images/GitHub-Mark-Light-32px.png" alt="github"><a href="https://github.com/nick-dolf/home">github repo</a></li>
-		</ul>
-	</main>
-</body>
+            </div>
+            <div class="skill-container"><span class="pill">HTML</span><span class="pill">SCSS</span><span class="pill">JS</span><span class="pill">JEKYLL</span><span class="pill">LIQUID</span><span class="pill">FORESTRY</span><a href="https://github.com/nick-dolf/tatlo"><span>github repo</span>
+                <svg viewbox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                  <use xlink:href="/assets/svg/sprites.svg#github"></use>
+                </svg></a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
