--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="columns">
           <div class="column-one">
             <h1>Hi ! I'm Nick Dolf - Full Stack Developer<br> Based in Chicago, IL
-            </h1><p>After being in the coffee world for over 16 years as an operations manager and technician I later discovered my desire for coding and decided to go back to school to fully immerse myself in the field. After earning my Bachelor of Science in Computer Science from Simon Fraser University in 2020 I also mover to Chicago, Illinois to be with my partner and our talkative cuddly cat.</p>
+            </h1><p>After being in the coffee world for over 16 years as an operations manager and technician I later discovered my desire for coding and decided to go back to school to fully immerse myself in the field. After earning my Bachelor of Science in Computer Science from Simon Fraser University in 2020 I also moved to Chicago, Illinois to be with my partner and our talkative cuddly cat.</p>
 <p>Since then I have been a developer in different capacities. I designed and developed two artist websites. I am also a volunteer lead developer for Code for Chicago, specifically building a new website for Cannabis Equity Illinois Coalition, which is a local non-profit that help with expungements for cannabis convictions and advocates for reform. I am also a freelance email developer for Mission Wired, and I do freelance Autocad drafting for Measure Masters.</p>
-<p>I am always excited to learn new languages while constantly sharpening the ones I know. Currently I am working on a open source CMS and a fitness app, among others to expand my scope and apply my knowledge and experience to professional opportunities.</p>
+<p>I am always excited to learn new languages while constantly sharpening the ones I know. Currently, I am working on a open source CMS and a fitness app, among others to expand my scope and apply my knowledge and experience to professional opportunities.</p>
 <p>In my spare time, I am learning how to play the guitar, work out, learn Spanish, cook and bake, and soak as much sun as I can.</p>
 
           </div>
