--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="I'm a reliable and fun developer.">
     <title>Nick Dolf - Full Stack Developer</title>
+    <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/pt-root-ui_regular.woff2" crossorigin>
+    <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/pt-root-ui_bold.woff2" crossorigin>
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   </head>
@@ -95,5 +97,9 @@
         </div>
       </section>
     </main>
+    <footer class="site-footer"><span>© Nick Dolf</span><a href="https://github.com/nick-dolf"><span>github repo</span>
+        <svg viewbox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+          <use xlink:href="/assets/svg/sprites.svg#github"></use>
+        </svg></a></footer>
   </body>
 </html>
