added gzip files

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </svg></a>
             </div>
           </div>
-          <div class="card"><a href="https://nickdolf.com/staging/ceic/">
+          <div class="card"><a href="https://cannabisequityil.org/">
               <div class="image-container">
                 <picture>
                   <source type="image/webp" srcset="/assets/images/ceic-1681073281746-600.webp"/><img src="/assets/images/ceic-1681073281746-600.jpg" width="600" height="1724" alt="ceic"/>
