fixed mobile accesibility issues

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                   <source type="image/webp" srcset="/assets/images/jadeyumang-1681073281746-600.webp"/><img src="/assets/images/jadeyumang-1681073281746-600.jpg" width="600" height="1289" alt="jadeyumang.com"/>
                 </picture>
               </div></a>
-            <div class="text-container"><p><em>Developer</em><br />Artist portfolio site with a custom CMS generating a static site.</p>
-
-            </div>
-            <div class="skill-container"><span class="pill">HTML</span><span class="pill">SCSS</span><span class="pill">NODE</span><span class="pill">EXPRESS</span><span class="pill">PUG</span><span class="pill">BOOTSTRAP</span><span class="pill">JS</span><a href="https://github.com/nick-dolf/jade"><span>github repo</span>
+            <div class="text-container"><a href="https://github.com/nick-dolf/jade" aria-label="Gitbhub repo">
                 <svg viewbox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="/assets/svg/sprites.svg#github"></use>
-                </svg></a>
+                </svg></a><p><em>Developer</em><br />Artist portfolio site with a custom CMS generating a static site.</p>
+
+            </div>
+            <div class="skill-container"><span class="pill">HTML</span><span class="pill">SCSS</span><span class="pill">NODE</span><span class="pill">EXPRESS</span><span class="pill">PUG</span><span class="pill">BOOTSTRAP</span><span class="pill">JS</span>
             </div>
           </div>
           <div class="card"><a href="https://cannabisequityil.org/">
@@ -70,13 +70,13 @@
                   <source type="image/webp" srcset="/assets/images/ceic-1681073281746-600.webp"/><img src="/assets/images/ceic-1681073281746-600.jpg" width="600" height="1724" alt="ceic"/>
                 </picture>
               </div></a>
-            <div class="text-container"><p><em>Lead Developer</em><br />Local non-profit website with static site generator and headless CMS.</p>
-
-            </div>
-            <div class="skill-container"><span class="pill">HTML</span><span class="pill">SCSS</span><span class="pill">JS</span><span class="pill">JEKYLL</span><span class="pill">LIQUID</span><span class="pill">FORESTRY</span><a href="https://github.com/Code-For-Chicago/ceic-jekyll"><span>github repo</span>
+            <div class="text-container"><a href="https://github.com/Code-For-Chicago/ceic-jekyll" aria-label="Gitbhub repo">
                 <svg viewbox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="/assets/svg/sprites.svg#github"></use>
-                </svg></a>
+                </svg></a><p><em>Lead Developer</em><br />Local non-profit website with static site generator and headless CMS.</p>
+
+            </div>
+            <div class="skill-container"><span class="pill">HTML</span><span class="pill">SCSS</span><span class="pill">JS</span><span class="pill">JEKYLL</span><span class="pill">LIQUID</span><span class="pill">FORESTRY</span>
             </div>
           </div>
           <div class="card"><a href="https://www.tatlo.info/">
@@ -85,13 +85,13 @@
                   <source type="image/webp" srcset="/assets/images/tatlo-1681073376089-600.webp"/><img src="/assets/images/tatlo-1681073376089-600.jpg" width="600" height="407" alt="tatlo.info"/>
                 </picture>
               </div></a>
-            <div class="text-container"><p><em>Developer</em><br />Artist portfolio site with a custom CMS generating a static site.</p>
-
-            </div>
-            <div class="skill-container"><span class="pill">HTML</span><span class="pill">SCSS</span><span class="pill">JS</span><span class="pill">JEKYLL</span><span class="pill">LIQUID</span><span class="pill">FORESTRY</span><a href="https://github.com/nick-dolf/tatlo"><span>github repo</span>
+            <div class="text-container"><a href="https://github.com/nick-dolf/tatlo" aria-label="Gitbhub repo">
                 <svg viewbox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="/assets/svg/sprites.svg#github"></use>
-                </svg></a>
+                </svg></a><p><em>Developer</em><br />Artist portfolio site with a custom CMS generating a static site.</p>
+
+            </div>
+            <div class="skill-container"><span class="pill">HTML</span><span class="pill">SCSS</span><span class="pill">JS</span><span class="pill">JEKYLL</span><span class="pill">LIQUID</span><span class="pill">FORESTRY</span>
             </div>
           </div>
         </div>
