added color grid

--- a/index.html
+++ b/index.html
@@ -96,6 +96,26 @@
           </div>
         </div>
       </section>
+      <section class="grid">
+        <h1>Toys</h1>
+        <div class="grid-container">
+          <div class="card"><a href="https://nickdolf.com/color-grid/">
+              <div class="image-container">
+                <picture>
+                  <source type="image/webp" srcset="/assets/images/nickdolfcom_color-grid_-1681692920602-600.webp"/><img src="/assets/images/nickdolfcom_color-grid_-1681692920602-600.jpg" width="600" height="648" alt="Color grid"/>
+                </picture>
+              </div></a>
+            <div class="text-container"><a href="https://github.com/nick-dolf/color-grid" aria-label="Gitbhub repo">
+                <svg viewbox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                  <use xlink:href="/assets/svg/sprites.svg#github"></use>
+                </svg></a><p>A simple pixel art toy.</p>
+
+            </div>
+            <div class="skill-container"><span class="pill">HTML</span><span class="pill">STYLUS</span><span class="pill">PARCEL</span>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="site-footer"><span>© Nick Dolf</span><a href="https://github.com/nick-dolf"><span>github repo</span>
         <svg viewbox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
