added putt putt

--- a/index.html
+++ b/index.html
@@ -99,6 +99,21 @@
       <section class="grid">
         <h1>Toys</h1>
         <div class="grid-container">
+          <div class="card"><a href="https://nickdolf.com/toys/putt-putt/">
+              <div class="image-container">
+                <picture>
+                  <source type="image/webp" srcset="/assets/images/putt-putt-1682281550709-600.webp"/><img src="/assets/images/putt-putt-1682281550709-600.jpg" width="600" height="930" alt="Mini putt game"/>
+                </picture>
+              </div></a>
+            <div class="text-container"><a href="https://github.com/nick-dolf/putt-putt" aria-label="Gitbhub repo">
+                <svg viewbox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                  <use xlink:href="/assets/svg/sprites.svg#github"></use>
+                </svg></a><p>A mini putt game</p>
+
+            </div>
+            <div class="skill-container"><span class="pill">PUG</span><span class="pill">STYLUS</span><span class="pill">PARCEL</span><span class="pill">JS</span>
+            </div>
+          </div>
           <div class="card"><a href="https://nickdolf.com/color-grid/">
               <div class="image-container">
                 <picture>
